--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mini-vue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/mini-vue.cjs.js",
+  "module": "lib/mini-vue.esm.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +15,12 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/jest": "^28.1.4",
     "babel-jest": "^28.1.2",
     "jest": "^28.1.2",
+    "rollup": "^2.77.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   }
 }
